components/opentelemetry-collector-gateway/configs/home/ingress-otlp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otlp
  namespace: opentelemetry-collector-gateway
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - otlp
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-collector-gateway
                port:
                  number: 4318
